Project

General

Profile

Actions

Bug #10546

closed

Bug Segmentation Fault when input prompt on cmder

Bug #10546: Bug Segmentation Fault when input prompt on cmder

Added by filipeteles (Filipe Teles) almost 12 years ago. Updated over 11 years ago.

Status:
Closed
Assignee:
Target version:
ruby -v:
ruby 2.1.5p273 (2014-11-13 revision 48405) [i386-mingw32]
[ruby-core:66471]

Description

Hi,

Whenever I run a ruby file that has a prompt, I get the a bug segmentation fault. I'm using cmder, which is a console emulator for windows. I can run the files just fine if I use the standard cmd or another console emulator.

My environment:
Windows 7 ultimate.
rails 4.1.6

C:/railsprojectfiles/rubyTheHardWay/ex14.rb:7: [BUG] Segmentation fault
ruby 2.1.5p273 (2014-11-13 revision 48405) [i386-mingw32]

-- Control frame information -----------------------------------------------
c:0003 p:---- s:0012 e:000011 CFUNC  :gets
c:0002 p:0063 s:0009 E:0010b8 EVAL   C:/railsprojectfiles/rubyTheHardWay/ex14.rb:7 [FINISH]
c:0001 p:0000 s:0002 E:00059c TOP    [FINISH]

C:/railsprojectfiles/rubyTheHardWay/ex14.rb:7:in `<main>'
C:/railsprojectfiles/rubyTheHardWay/ex14.rb:7:in `gets'

-- C level backtrace information -------------------------------------------
C:\Windows\SYSTEM32\ntdll.dll(KiFastSystemCallRet+0x0) [0x76F370F4]
C:\Windows\system32\kernel32.dll(WaitForSingleObjectEx+0x43) [0x76A5C3D3]
C:\Windows\system32\kernel32.dll(WaitForSingleObject+0x12) [0x76A5C382]
C:\RailsFTW416213\bin\msvcrt-ruby210.dll(rb_vm_bugreport+0xa7) [0x6D394A17]
C:\RailsFTW416213\bin\msvcrt-ruby210.dll(rb_name_err_mesg_new+0x69f) [0x6D248F7F]
C:\RailsFTW416213\bin\msvcrt-ruby210.dll(rb_bug+0x2e) [0x6D249D5E]
C:\RailsFTW416213\bin\msvcrt-ruby210.dll(rb_check_safe_str+0x34b) [0x6D31486B]
 [0x00401866]
C:\Windows\SYSTEM32\ntdll.dll(EtwReplyNotification+0x366) [0x76F67F62]

-- Other runtime information -----------------------------------------------

* Loaded script: C:/railsprojectfiles/rubyTheHardWay/ex14.rb

* Loaded features:

    0 enumerator.so
    1 C:/RailsFTW416213/lib/ruby/2.1.0/i386-mingw32/enc/encdb.so
    2 C:/RailsFTW416213/lib/ruby/2.1.0/i386-mingw32/enc/iso_8859_1.so
    3 C:/RailsFTW416213/lib/ruby/2.1.0/i386-mingw32/enc/trans/transdb.so
    4 C:/RailsFTW416213/lib/ruby/2.1.0/i386-mingw32/rbconfig.rb
    5 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/compatibility.rb
    6 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/defaults.rb
    7 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/deprecate.rb
    8 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/errors.rb
    9 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/version.rb
   10 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/requirement.rb
   11 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/platform.rb
   12 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/basic_specification.rb
   13 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/stub_specification.rb
   14 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/util/stringio.rb
   15 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/specification.rb
   16 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/exceptions.rb
   17 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/defaults/operating_system.rb
   18 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/core_ext/kernel_gem.rb
   19 thread.rb
   20 C:/RailsFTW416213/lib/ruby/2.1.0/i386-mingw32/thread.so
   21 C:/RailsFTW416213/lib/ruby/2.1.0/monitor.rb
   22 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems/core_ext/kernel_require.rb
   23 C:/RailsFTW416213/lib/ruby/2.1.0/rubygems.rb

[NOTE]
You may have encountered a bug in the Ruby interpreter or extension libraries.
Bug reports are welcome.
For details: http://www.ruby-lang.org/bugreport.html


This application has requested the Runtime to terminate it in an unusual way.
Please contact the application's support team for more information.

Files

2014-11-26 17_30_48-Cmder.png (13.7 KB) 2014-11-26 17_30_48-Cmder.png filipeteles (Filipe Teles), 11/26/2014 06:31 AM

Related issues 2 (0 open — 2 closed)

Related to Ruby - Bug #10606: Ruby on consoles emulatorsClosedActions
Is duplicate of Ruby - Bug #10408: [BUG] Segmentation fault ruby 2.1.3p242 (2014-09-19 revision 47630) [i386-mingw32] ClosedwindowsActions
Actions

Also available in: PDF Atom